# EasyRTC

./: .gitignore  README.md
android/: README.md  gradle.properties  local.properties  log.sh  offer_answer.txt  package-lock.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  (+5 more)
android/cli/: CMakeLists.txt  build.sh
android/docs/: camera-render.md  fragment-view-texture-lifecycle.md
android/easyrtc/: build.gradle.kts
android/easyrtc/src/main/cpp/: CMakeLists.txt  easyrtc_audio.cpp  easyrtc_audio.h  easyrtc_audio_decoder.cpp  easyrtc_audio_decoder.h  easyrtc_audio_playback.cpp  easyrtc_audio_playback.h  easyrtc_common.h  easyrtc_encoder_gl.cpp  easyrtc_encoder_gl.h  easyrtc_frame_dump.cpp  easyrtc_frame_dump.h  easyrtc_frame_reader.cpp  easyrtc_frame_reader.h  easyrtc_java_log_bridge.cpp  easyrtc_logger.cpp  easyrtc_media.cpp  easyrtc_media.h  easyrtc_packet.hpp  easyrtc_session.cpp  easyrtc_session.h  easyrtc_test_jni.cpp  easyrtc_video_decoder.cpp  easyrtc_video_decoder.h
android/easyrtc/src/main/cpp/capture/: audio_capture.cpp  audio_capture.h
android/easyrtc/src/main/cpp/codec/: audio_decoder.cpp  audio_playback.cpp  audio_playback.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
android/easyrtc/src/main/cpp/gl/: encoder_gl_bridge.cpp  encoder_gl_bridge.h
android/easyrtc/src/main/cpp/jni/: log_bridge_jni.cpp  test_jni.cpp
android/easyrtc/src/main/cpp/session/: camera_error_handler.cpp  camera_error_handler.h  common.h  media_session.cpp  media_session.h  transceiver_stats_reporter.cpp  transceiver_stats_reporter.h
android/easyrtc/src/main/cpp/util/: frame_dump.cpp  frame_dump.h  frame_reader.cpp  logger.cpp  logger.h  packet.hpp  sleep.hpp  video.hpp
android/easyrtc/src/main/cpp/utils/: defer.hpp  ringbuffer.hpp
android/gradle/: libs.versions.toml
android/tests/: test_video_hpp.cpp
demo/: README.md
demo/EasyRTC_C++_Demo/EasyRTC_Device/: CDlgVideoRender.cpp  CDlgVideoRender.h  CharacterTranscoding.cpp  CharacterTranscoding.h  EasyRTCDevice.aps  EasyRTCDevice.rc  EasyRTC_Device.cpp  EasyRTC_Device.h  EasyRTC_Device.sln  EasyRTC_Device.vcxproj  EasyRTC_Device.vcxproj.filters  EasyRTC_DeviceDlg.cpp  EasyRTC_DeviceDlg.h  pch.cpp  pch.h  resource.h
demo/EasyRTC_C++_Demo/EasyRTC_Device/AudioPlayer/: libAudioPlayerAPI.h
demo/EasyRTC_C++_Demo/EasyRTC_Device/res/: EasyRTCDevice.rc2
demo/EasyRTC_C++_Demo/EasyRTC_FILE/: EasyRTC_FILE.sln  EasyRTC_FILE.vcxproj  EasyRTC_FILE.vcxproj.filters  EasyRtcDevice.cpp  EasyRtcDevice.h  main.cpp  osthread.cpp
demo/EasyRTC_C++_Demo/EasyRTC_FILE/EasyRTCSDK/: EasyRTC.lib
demo/EasyRTC_C++_Demo/EasyRTC_FILE/FileParser/: ESFileParser.cpp  ESFileParser.h
demo/EasyRTC_C++_Demo/EasyRTC_FILE/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
demo/EasyRTC_C_Demo/: EasyRTC_C_Demo.sln  EasyRTC_C_Demo.vcxproj  EasyRTC_C_Demo.vcxproj.filters  EasyRtcDevice_C.c  EasyRtcDevice_C.h  main.c  osmutex.h  osthread.c  osthread.h
demo/EasyRTC_C_Demo/EasyRTCSDK/: EasyRTC.h
docs/: android-call-graph.txt  dump_frames.qa.txt  easyrtc_av_pcm.pcm
docs/superpowers/plans/: 2026-04-20-android-native-media-migration.md
docs/superpowers/specs/: 2026-04-18-android-cli-design.md  2026-04-20-android-native-media-migration-design.md  2026-04-21-easyrtcsdk-instrumentation-tests-design.md
include/: EasyRTC.h  EasyRTCAPI.h  JNI_EasyRTCPeer.h
lib/: README.md
lib/windows/x64/: EasyRTC.lib
linux/: README.md
linux/EasyRTC_Open/EasyRTC-P2P_File/: EasyRTC-P2P_File.vcxproj  EasyRTC-P2P_File.vcxproj.filters  main.cpp
linux/EasyRTC_Open/EasyRTC-P2P_File/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
linux/EasyRTC_Open/EasyRTC_Open/: EasyRTCDeviceAPI.c  EasyRTCDeviceAPI.h  EasyRTC_Open.vcxproj  EasyRTC_Open.vcxproj.filters  EasyRTC_websocket.c  EasyRTC_websocket.h  RTCCaller.c  RTCDevice.c  RTCDevice.h  RTCPeer.c  RTCPeer.h  WsHandle.c  g711.c  main.c  websocketClient.c  websocketClient.h  wsProtocol.h
linux/EasyRTC_Open/EasyRTC_Open/jni/: JNI_EasyRTCDevice.h
linux/common/: EasyRTC_websocket.c  EasyRTC_websocket.h  osthread.c  osthread.h
signalserver/: Deserialize.c  README.md  Sdp.h  build.sh  main.cpp  编译说明.txt
signalserver/ini/: dictionary.h  iniparser.c
windows/: EasyRTC-P2P.sln
windows/EasyRTC-P2P/: ButtonListCtrl.cpp  ButtonListCtrl.h  CDlgNewVersion.cpp  CDlgNewVersion.h  CDlgVideo.cpp  CDlgVideo.h  CharacterTranscoding.cpp  CharacterTranscoding.h  CreateDump.cpp  CreateDump.h  EasyRTC-P2P.aps  EasyRTC-P2P.cpp  EasyRTC-P2P.h  EasyRTC-P2P.rc  EasyRTC-P2P.vcxproj  EasyRTC-P2P.vcxproj.filters  EasyRTC-P2PDlg.cpp  EasyRTC-P2PDlg.h  ListButton.cpp  ListButton.h  XmlConfig.cpp  XmlConfig.h  iconv.lib  pch.cpp  pch.h  resource.h
windows/EasyRTC-P2P/AudioCapturer/: libAudioCapturerAPI.h
windows/EasyRTC-P2P/AudioPlayer/: AudioPlayer.lib  libAudioPlayerAPI.h
windows/EasyRTC-P2P/D3DRender/: D3DRenderAPI.h  VADef.h
windows/EasyRTC-P2P/EasyStreamClient/: EasyStreamClientAPI.h  EasyTypes.h
windows/EasyRTC-P2P/FFTranscode/: TransCodeAPI.h
windows/EasyRTC-P2P/curlWebClient/: curlWebClient.lib  curlWebClientAPI.h
windows/EasyRTC-P2P/res/: EasyRTC-P2P.rc2
windows/EasyRTC_Open/: EasyRTCDeviceAPI.c  EasyRTCDeviceAPI.h  EasyRTC_Open.vcxproj  EasyRTC_Open.vcxproj.filters  EasyRTC_websocket.c  EasyRTC_websocket.h  RTCCaller.c  RTCDevice.c  RTCDevice.h  RTCPeer.c  RTCPeer.h  WsHandle.c  g711.h  main.c  websocketClient.c  websocketClient.h  wsProtocol.h
windows/EasyRTC_Open/websocket/: websocketClient.h
windows/common/: cJSON.h  osthread.c
windows/x64/: EasyRTC.lib
windows/x86/: EasyRTC.lib
(+118 files in other folders)
